package com.mcnz.shapes;

public class Rectangle extends Shape
{
    
}
