package com.mcnz.shapes;

public abstract class Shape {

    int height;
    int width;

    public int calcArea() {
        return height * width;
    }
    
}
