package com.mcnz.shapes;

public class Square extends Rectangle 
{
    public Square(int side) 
    {
        height = side;
        width = side;
    }
    
}
