classDiagram

    class Surface {
        <<interface>>
        +calcArea() int
    }

    class Shape {
        <<abstract>>
        #height int
        #width int
        +calcArea() int
        +getHeight() int
        +setHeight(height int) void
        +getWidth() int
        +setWidth(width int) void
    }

    class Rectangle {
    }

    class Square {
        +Square(x int)
    }

    class Triangle {
        +Triangle(x int, y int)
        +calcArea() int
    }

    class Point {
        ~x int
        ~y int
    }

    class Line {
        ~p1 Point
        ~p2 Point
    }

    class Circle {
        ~radius int
        +Circle(r int)
        +calcArea() int
    }

    class ShapeTester {
        +compareShapes(objectA Surface, objectB Surface) boolean$
        +main(args String[]) void$
    }

    Surface <|.. Shape : implements

    Shape <|-- Rectangle : extends
    Shape <|-- Point : extends
    Shape <|-- Line : extends
    Shape <|-- Triangle : extends

    Rectangle <|-- Square : extends

    Line --> Point : contains

    ShapeTester ..> Surface : uses
    ShapeTester ..> Rectangle : creates
    ShapeTester ..> Square : creates
    ShapeTester ..> Point : creates
    ShapeTester ..> Line : creates
    ShapeTester ..> Triangle : creates
    ShapeTester ..> Circle : creates

    note for Circle "Circle does not extend Shape\nor implement Surface"
